PYIC-8667: Allow root to sign

--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -3191,6 +3191,7 @@ Resources:
               - "kms:UpdateKeyDescription"
               - "kms:UpdatePrimaryRegion"
               - "kms:Verify"
+              - "kms:Sign"
             Resource: '*'
           - Sid: Allow Github Actions to Sign
             Effect: "Allow"
