--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/f2f-hand-off.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/f2f-hand-off.yaml
@@ -117,14 +117,52 @@ states:
         targetState: ERROR_NO_TICF
         checkJourneyContext:
           mediumConfidence:
+            targetState: RESET_SESSION_BEFORE_IDENTITY_DOCUMENT_START
+          lowConfidence:
+            targetState: RESET_SESSION_BEFORE_IDENTITY_DOCUMENT_START
+      webRoute:
+        targetJourney: TECHNICAL_ERROR
+        targetState: ERROR_NO_TICF
+        checkJourneyContext:
+          mediumConfidence:
+            targetState: RESET_SESSION_BEFORE_DCMAW_ASYNC_ANOTHER_WAY
+          lowConfidence:
+            targetState: RESET_SESSION_BEFORE_DCMAW_ASYNC_ANOTHER_WAY
+      returnToRp:
+        targetState: RETURN_TO_RP
+
+  RESET_SESSION_BEFORE_IDENTITY_DOCUMENT_START:
+    response:
+      type: process
+      lambda: reset-session-identity
+      lambdaInput:
+        resetType: ALL
+    events:
+      next:
+        checkJourneyContext:
+          mediumConfidence:
             targetJourney: NEW_P2_IDENTITY
             targetState: IDENTITY_DOCUMENT_START
           lowConfidence:
             targetJourney: NEW_P1_IDENTITY
             targetState: IDENTITY_DOCUMENT_START
-      webRoute:
-        targetJourney: TECHNICAL_ERROR
-        targetState: ERROR_NO_TICF
+      error:
+        checkJourneyContext:
+          mediumConfidence:
+            targetJourney: NEW_P2_IDENTITY
+            targetState: IDENTITY_DOCUMENT_START
+          lowConfidence:
+            targetJourney: NEW_P1_IDENTITY
+            targetState: IDENTITY_DOCUMENT_START
+
+  RESET_SESSION_BEFORE_DCMAW_ASYNC_ANOTHER_WAY:
+    response:
+      type: process
+      lambda: reset-session-identity
+      lambdaInput:
+        resetType: ALL
+    events:
+      next:
         checkJourneyContext:
           mediumConfidence:
             targetJourney: NEW_P2_IDENTITY
@@ -132,8 +170,14 @@ states:
           lowConfidence:
             targetJourney: NEW_P1_IDENTITY
             targetState: DCMAW_ASYNC_ANOTHER_WAY
-      returnToRp:
-        targetState: RETURN_TO_RP
+      error:
+        checkJourneyContext:
+          mediumConfidence:
+            targetJourney: NEW_P2_IDENTITY
+            targetState: DCMAW_ASYNC_ANOTHER_WAY
+          lowConfidence:
+            targetJourney: NEW_P1_IDENTITY
+            targetState: DCMAW_ASYNC_ANOTHER_WAY
 
   RESET_SESSION_BEFORE_F2F_HANDOFF:
     response:
