PYIC-8647 Add reset-session to some routs after error
A reset-session is needed to ensure no name clash happens after
faile F2F

Co-authored-by: Thea Bautista <thea.bautista@digital.cabinet-office.gov.uk>

--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p2-identity.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p2-identity.yaml
@@ -397,7 +397,7 @@ states:
       try-again-post-office:
         targetState: CRI_CLAIMED_IDENTITY_J4
       return-to-rp:
-        targetState: RETURN_TO_RP
+        targetState: PROCESS_INCOMPLETE_IDENTITY
 
   # DCMAW journey (J1)
   POST_APP_DOC_CHECK_SUCCESS_PAGE:
