PYIC-8702: update local-running secrets template to include SIS api key

--- a/local-running/core.local.secrets.template.yaml
+++ b/local-running/core.local.secrets.template.yaml
@@ -31,6 +31,8 @@ core:
     }'
   evcs:
     apiKey: "EVCS_API_KEY" # pragma: allowlist secret
+  sis:
+    apiKey: "SIS_API_KEY" # pragma: allowlist secret
   cimitApi:
     apiKey: "CIMIT_API_KEY" # pragma: allowlist secret
   credentialIssuers:
