--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p2-identity.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p2-identity.yaml
@@ -301,7 +301,7 @@ states:
       try-again-post-office:
         targetState: CRI_CLAIMED_IDENTITY_J4
       return-to-rp-cri-error:
-        targetState: RETURN_TO_RP
+        targetState: PROCESS_INCOMPLETE_IDENTITY
 
   CHECK_FRAUD_AFTER_DL:
     response:
@@ -522,7 +522,7 @@ states:
       try-again-post-office:
         targetState: CRI_CLAIMED_IDENTITY_J4
       return-to-rp:
-        targetState: RETURN_TO_RP
+        targetState: PROCESS_INCOMPLETE_IDENTITY
 
   MITIGATION_KBV_FAIL_NO_PHOTO_ID:
     response:
