PYIC-8710: add IPV_DWP_KBV_HANDOFF_START and emit when landing on personal-independence-payment page

--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/kbvs.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/kbvs.yaml
@@ -7,6 +7,8 @@ description: >-
 entryEvents:
   next:
     targetState: PRE_DWP_KBV_PIP_PAGE
+    auditEvents:
+      - IPV_DWP_KBV_HANDOFF_START
     checkIfDisabled:
       dwpKbv:
         targetState: PRE_EXPERIAN_PAGE
