--- a/.github/workflows/secure-post-merge.yml
+++ b/.github/workflows/secure-post-merge.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
     paths-ignore:
+      - '**/README.md'
       - '.github/workflows/secure-post-merge.yml'
       - '.github/workflows/secure-post-merge-notags.yml'
   workflow_dispatch:
