PYIC-8460: Update powertools and make required changes

--- a/libs/common-services/build.gradle
+++ b/libs/common-services/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 			libs.openTelemetryJavaHttpClient,
 			libs.powertoolsLogging,
 			libs.powertoolsParameters,
+			libs.powertoolsSecrets,
+			libs.powertoolsAppConfig,
 			libs.powertoolsMetrics
 
 	compileOnly libs.lombok
