--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ jackson = "2.20.0"
 log4j = "2.25.0"
 mockito = "5.20.0"
 pact = "4.6.17"
-powertools = "1.20.1"
+powertools = "2.5.0"
 
 [libraries]
 apacheHttpCore = "org.apache.httpcomponents.core5:httpcore5:5.3.3"
@@ -42,9 +42,11 @@ openTelemetryAwsSdkAutoConfigure = { module = "io.opentelemetry.instrumentation:
 openTelemetryJavaHttpClient = { module = "io.opentelemetry.instrumentation:opentelemetry-java-http-client" }
 pactConsumerJunit = { module = "au.com.dius.pact.consumer:junit5", version.ref = "pact" }
 pactProviderJunit = { module = "au.com.dius.pact.provider:junit5", version.ref = "pact" }
-powertoolsLogging = { module = "software.amazon.lambda:powertools-logging", version.ref = "powertools" }
+powertoolsLogging = { module = "software.amazon.lambda:powertools-logging-log4j", version.ref = "powertools" }
 powertoolsMetrics = { module = "software.amazon.lambda:powertools-metrics", version.ref = "powertools" }
 powertoolsParameters = { module = "software.amazon.lambda:powertools-parameters", version.ref = "powertools" }
+powertoolsSecrets = { module = "software.amazon.lambda:powertools-parameters-secrets", version.ref = "powertools" }
+powertoolsAppConfig = { module = "software.amazon.lambda:powertools-parameters-appconfig", version.ref = "powertools" }
 systemStubs = "uk.org.webcompere:system-stubs-jupiter:2.1.3"
 
 [bundles]
