--- a/libs/test-data/src/main/resources/test-parameters.yaml
+++ b/libs/test-data/src/main/resources/test-parameters.yaml
@@ -314,7 +314,7 @@ core:
     dwpKbv:
       id: dwpKbv
       name: DWP KBV
-      enabled: "false"
+      enabled: "true"
       unavailable: false # temporarily unavailable
       allowedSharedAttributes: "name,birthDate,address"
       activeConnection: "stub"
@@ -420,7 +420,3 @@ core:
         ticf:
           enabled: true
     # CRI enablement combinations
-    dwpKbvTest:
-      credentialIssuers:
-        dwpKbv:
-          enabled: true
