--- a/.github/workflows/pre-merge-checks.yml
+++ b/.github/workflows/pre-merge-checks.yml
@@ -62,6 +62,7 @@ jobs:
         run: ./gradlew clean build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          POWERTOOLS_METRICS_NAMESPACE: 'TestMetricsNamespace'
 
       - name: Perform Static Analysis
         if: ${{ github.actor != 'dependabot[bot]' }}
@@ -145,6 +146,7 @@ jobs:
           CRI_STUB_GEN_CRED_API_KEY: ${{ secrets.CRI_STUB_GEN_CRED_API_KEY }}
           MANAGEMENT_TICF_API_KEY: ${{ secrets.MANAGEMENT_TICF_API_KEY }}
           CIMIT_INTERNAL_API_KEY: ${{ secrets.API_KEY_CIMIT }}
+          POWERTOOLS_METRICS_NAMESPACE: 'TestMetricsNamespace'
         run: npm run test:ci
 
       - name: Upload API test report
