PYIC-8706: Reset users identity when looping back to web app journey from technical error page

--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p2-identity.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p2-identity.yaml
@@ -85,6 +85,23 @@ states:
         targetState: ERROR
 
   # Journey states
+  RESET_SESSION_BEFORE_WEBAPP_RETRY:
+    response:
+      type: process
+      lambda: reset-session-identity
+      lambdaInput:
+        resetType: ALL
+    events:
+      next:
+        checkFeatureFlag:
+          strategicAppEnabled:
+            targetState: STRATEGIC_APP_TRIAGE
+            targetEntryEvent: appTriage
+        targetState: APP_DOC_CHECK
+        targetEntryEvent: next
+      error:
+        targetState: APP_DOC_CHECK
+        targetEntryEvent: next
 
   RESET_SESSION_IDENTITY:
     response:
@@ -388,12 +405,7 @@ states:
             auditContext:
               mitigationType: enhanced-verification
       try-again-app:
-        targetState: APP_DOC_CHECK
-        targetEntryEvent: next
-        checkFeatureFlag:
-          strategicAppEnabled:
-            targetState: STRATEGIC_APP_TRIAGE
-            targetEntryEvent: appTriage
+        targetState: RESET_SESSION_BEFORE_WEBAPP_RETRY
       try-again-post-office:
         targetJourney: F2F_HAND_OFF
         targetState: START_MEDIUM_CONFIDENCE
@@ -518,12 +530,7 @@ states:
             auditContext:
               mitigationType: enhanced-verification
       try-again-app:
-        targetState: APP_DOC_CHECK
-        targetEntryEvent: next
-        checkFeatureFlag:
-          strategicAppEnabled:
-            targetState: STRATEGIC_APP_TRIAGE
-            targetEntryEvent: appTriage
+        targetState: RESET_SESSION_BEFORE_WEBAPP_RETRY
       try-again-post-office:
         targetJourney: F2F_HAND_OFF
         targetState: START_MEDIUM_CONFIDENCE
