--- a/journey-map/package.json
+++ b/journey-map/package.json
@@ -15,7 +15,7 @@
     "tsc": "tsc && tsc --project tsconfig.server.json --noEmit",
     "lint": "eslint src server && prettier src server --check",
     "lint-fix": "eslint --fix src server && prettier src server --write",
-    "test": "node --import tsx --test src/**/*.test.ts"
+    "test": "vitest"
   },
   "dependencies": {
     "express": "5.0.1",
@@ -32,6 +32,7 @@
     "globals": "^15.9.0",
     "prettier": "^3.5.1",
     "tsx": "^4.19.3",
-    "typescript-eslint": "^8.31.0"
+    "typescript-eslint": "^8.31.0",
+    "vitest": "^3.0.0"
   }
 }
