--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -3079,6 +3079,7 @@ Resources:
 #  App Config Pipeline
   AppConfigPipelineValidateFunctionInvokePermission:
     Type: AWS::Lambda::Permission
+    DependsOn: ValidateAppConfigFunction
     Properties:
       FunctionName: !Sub "${ValidateAppConfigFunction.Arn}:live"
       Action: lambda:InvokeFunction
