--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -3069,23 +3069,23 @@ Resources:
 
   ValidateAppConfigInvokePermission:
     Type: AWS::Lambda::Permission
-    Condition: IsBuildStagingIntProd
     Properties:
       Action: "lambda:InvokeFunction"
       FunctionName: !Ref ValidateAppConfigFunction
       Principal: "appconfig.amazonaws.com"
-      SourceArn: !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/configurationprofile/${AppConfigConfigurationProfile}"
+      SourceArn: !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"
 
 #  App Config Pipeline
-  AppConfigPipelineValidateFunctionInvokePermission:
-    Type: AWS::Lambda::Permission
-    DependsOn: ValidateAppConfigFunction
-    Properties:
-      FunctionName: !Sub "${ValidateAppConfigFunction.Arn}:live"
-      Action: lambda:InvokeFunction
-      Principal: appconfig.amazonaws.com
-      SourceAccount: !Ref AWS::AccountId
-      SourceArn: !Sub arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*
+#  AppConfigPipelineValidateFunctionInvokePermission:
+#    Type: AWS::Lambda::Permission
+#    DependsOn:
+#      - ValidateAppConfigFunction
+#    Properties:
+#      FunctionName: !GetAtt ValidateAppConfigFunction.Arn
+#      Action: lambda:InvokeFunction
+#      Principal: appconfig.amazonaws.com
+#      SourceAccount: !Ref AWS::AccountId
+#      SourceArn: !Sub arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*
 
   CallDcmawAsyncCriFunction:
     Type: AWS::Serverless::Function
