--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -3077,15 +3077,15 @@ Resources:
       SourceArn: !Sub "arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/${AppConfigApplication}/configurationprofile/${AppConfigConfigurationProfile}"
 
 #  App Config Pipeline
-#  AppConfigPipelineValidateFunctionInvokePermission:
-#    Type: AWS::Lambda::Permission
-#    DependsOn: ValidateAppConfigFunction
-#    Properties:
-#      FunctionName: !Sub "${ValidateAppConfigFunction.Arn}:live"
-#      Action: lambda:InvokeFunction
-#      Principal: appconfig.amazonaws.com
-#      SourceAccount: !Ref AWS::AccountId
-#      SourceArn: !Sub arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*
+  AppConfigPipelineValidateFunctionInvokePermission:
+    Type: AWS::Lambda::Permission
+    DependsOn: ValidateAppConfigFunction
+    Properties:
+      FunctionName: !Sub "${ValidateAppConfigFunction.Arn}:live"
+      Action: lambda:InvokeFunction
+      Principal: appconfig.amazonaws.com
+      SourceAccount: !Ref AWS::AccountId
+      SourceArn: !Sub arn:aws:appconfig:${AWS::Region}:${AWS::AccountId}:application/*
 
   CallDcmawAsyncCriFunction:
     Type: AWS::Serverless::Function
