PYIC-8647 put sorry-technical-error routing behind a feature flag

--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/f2f-hand-off.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/f2f-hand-off.yaml
@@ -99,7 +99,9 @@ states:
         targetJourney: FAILED
         targetState: FAILED_NO_TICF
       error:
-        targetState: SORRY_CRI_TECHNICAL_PROBLEM_CRI_F2F
+        checkFeatureFlag:
+          sorryTechnicalErrorEnabled:
+            targetState: SORRY_CRI_TECHNICAL_PROBLEM_CRI_F2F
       temporarily-unavailable:
         targetJourney: TECHNICAL_ERROR
         targetState: ERROR_NO_TICF
