--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/kbvs.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/kbvs.yaml
@@ -44,7 +44,9 @@ nestedJourneyStates:
       fail-with-ci:
         exitEventToEmit: fail-with-ci
       error:
-        targetState: SORRY_CRI_TECHNICAL_PROBLEM_EXPERIAN_KBV_CRI
+        checkFeatureFlag:
+          sorryTechnicalErrorEnabled:
+            targetState: SORRY_CRI_TECHNICAL_PROBLEM_EXPERIAN_KBV_CRI
   SORRY_CRI_TECHNICAL_PROBLEM_EXPERIAN_KBV_CRI:
     response:
       type: page
