PYIC-8647 refine and correct api tests to validate sorry-technical flag
The old test coverage didn't include tests for server-errors on the cris
where the new functionality is introduced so a test for flag
disabled is needed. The tests for the new feature also
needed the flag activated in a different way than initailly implemented.
A default state for errors is needed in the yaml because the presence
of the feature flag check overrides the inherited default.

--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/f2f-hand-off.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/f2f-hand-off.yaml
@@ -99,6 +99,8 @@ states:
         targetJourney: FAILED
         targetState: FAILED_NO_TICF
       error:
+        targetJourney: TECHNICAL_ERROR
+        targetState: ERROR
         checkFeatureFlag:
           sorryTechnicalErrorEnabled:
             targetState: SORRY_CRI_TECHNICAL_PROBLEM_CRI_F2F
