--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/kbvs.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/kbvs.yaml
@@ -44,6 +44,8 @@ nestedJourneyStates:
       fail-with-ci:
         exitEventToEmit: fail-with-ci
       error:
+        targetJourney: TECHNICAL_ERROR
+        targetState: ERROR
         checkFeatureFlag:
           sorryTechnicalErrorEnabled:
             targetState: SORRY_CRI_TECHNICAL_PROBLEM_EXPERIAN_KBV_CRI
