--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/web-dl-or-passport.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/nested-journeys/web-dl-or-passport.yaml
@@ -39,6 +39,8 @@ nestedJourneyStates:
             auditContext:
               mitigationType: invalid-passport
       error:
+        targetJourney: TECHNICAL_ERROR
+        targetState: ERROR
         checkFeatureFlag:
           sorryTechnicalErrorEnabled:
             targetState: SORRY_CRI_TECHNICAL_PROBLEM_CRI_UK_PASSPORT
@@ -99,6 +101,8 @@ nestedJourneyStates:
             auditContext:
               mitigationType: invalid-dl
       error:
+        targetJourney: TECHNICAL_ERROR
+        targetState: ERROR
         checkFeatureFlag:
           sorryTechnicalErrorEnabled:
             targetState: SORRY_CRI_TECHNICAL_PROBLEM_CRI_DRIVING_LICENCE
