PYIC-8706: Use correct level of confidence in journey map

--- a/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p1-identity.yaml
+++ b/lambdas/process-journey-event/src/main/resources/statemachine/journey-maps/new-p1-identity.yaml
@@ -406,7 +406,7 @@ states:
         targetState: RESET_SESSION_BEFORE_WEBAPP_RETRY
       try-again-post-office:
         targetJourney: F2F_HAND_OFF
-        targetState: START_MEDIUM_CONFIDENCE
+        targetState: START_LOW_CONFIDENCE
         checkIfDisabled:
           f2f:
             targetJourney: TECHNICAL_ERROR
@@ -517,7 +517,7 @@ states:
         targetState: RESET_SESSION_BEFORE_WEBAPP_RETRY
       try-again-post-office:
         targetJourney: F2F_HAND_OFF
-        targetState: START_MEDIUM_CONFIDENCE
+        targetState: START_LOW_CONFIDENCE
         checkIfDisabled:
           f2f:
             targetJourney: TECHNICAL_ERROR
