PYIC-8731: Add GetFunctionConfiguration for manual f2f reset lambda permission.

--- a/deploy/template.yaml
+++ b/deploy/template.yaml
@@ -892,6 +892,7 @@ Resources:
             Action:
               - lambda:InvokeFunction
               - lambda:GetFunction
+              - lambda:GetFunctionConfiguration
             Resource:
               - !Sub arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:manual-f2f-pending-reset-${Environment}
 
