PYIC-8825: Disable NPM scripts
There have been a couple of recent attacks where npm pre and post install scripts have been used to infect machines

--- a/api-tests/.npmrc.template
+++ b/api-tests/.npmrc.template
@@ -1,2 +1,3 @@
+ignore-scripts=true
 @govuk-one-login:registry=https://npm.pkg.github.com
 //npm.pkg.github.com:_authToken=GITHUB_PAT_WITH_READ:PACKAGES
