BAU: Change compose.yaml to be a template and add local-running/compose.yaml to .gitignore
As folder structure may be different for developers, especially before dev-deploy tool, changing compose.yaml to a template will prevent accidental commits if someone will use different path to the Dockerfiles

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,6 @@ journey-map/.env*
 !journey-map/.env.template
 
 journey-map/public/application.js*
+
+# Ignore local running docker compose file
+local-running/compose.yaml
