PYIC-8757: Improve job name

--- a/.github/workflows/contract-tests.yaml
+++ b/.github/workflows/contract-tests.yaml
@@ -24,7 +24,7 @@ on:
       - synchronize
 
 jobs:
-  contract-testing-consumer:
+  contract-testing:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
