PYIC-8757: Use SHA rather than version for setup-sam action

--- a/.github/workflows/automated-tests.yaml
+++ b/.github/workflows/automated-tests.yaml
@@ -211,7 +211,7 @@ jobs:
         with:
           gradle-version: "8.13"
 
-      - uses: aws-actions/setup-sam@v2
+      - uses: aws-actions/setup-sam@c2a20b1822cc4a6bc594ff7f1dbb658758e383c3
         with:
           use-installer: true
 
